replace auto color scheme detection by fixed data-theme to avoir white text in forced light mode when browser is set in dark mode

--- a/pod/main/static/css/pod-admin.css
+++ b/pod/main/static/css/pod-admin.css
@@ -1,30 +1,9 @@
-@media (prefers-color-scheme: dark) {
-  .select2-container--default .select2-selection--multiple,
-  .select2-dropdown,
-  .select2-container--default
-    .select2-selection--multiple
-    .select2-selection__choice {
-    background-color: #121212 !important;
-  }
-
-  .select2-container--default.select2-container--focus
-    .select2-selection--multiple {
-    border: solid white 1px !important;
-  }
-
-  .select2-search__field {
-    color: white !important;
-  }
-
-  :root {
-    --pod-font-color: white;
-  }
-}
 
 /** Set the Django-admin auto dark mode
  *  when dark theme is active in Pod.
  **/
 :root[data-theme="dark"] {
+  --pod-font-color: white;
   --primary: #264b5d;
   --primary-fg: #eee;
   --accent: #f5dd5d;
@@ -55,6 +34,20 @@
   --body-bg: #fff;
   --button-fg: #fff;
   --body-quiet-color: #666;
+}
+
+:root[data-theme="dark"] .select2-container--default .select2-selection--multiple,
+:root[data-theme="dark"] .select2-dropdown,
+:root[data-theme="dark"] .select2-container--default .select2-selection--multiple .select2-selection__choice {
+  background-color: #121212 !important;
+}
+
+:root[data-theme="dark"] .select2-container--default.select2-container--focus .select2-selection--multiple {
+  border: solid white 1px !important;
+}
+
+:root[data-theme="dark"] .select2-search__field {
+  color: white !important;
 }
 
 .calendar table {
